--- a/Frontend/src/app/pages/students/editstudent/editstudent.component.css
+++ b/Frontend/src/app/pages/students/editstudent/editstudent.component.css
@@ -75,3 +75,8 @@ body{
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
+
+.headingdiv{
+    border: 1px solid black;
+    border-radius: 30px;
+}
