--- a/Frontend/src/app/pages/students/editstudent/editstudent.component.html
+++ b/Frontend/src/app/pages/students/editstudent/editstudent.component.html
@@ -2,6 +2,10 @@
 
 <div class="registration-form">
     <form class="form1" [formGroup]="editform" (ngSubmit)="onsubmit()">
+        <div class="text-center headingdiv bg-primary-subtle fs-3 font-monospac">
+            <span>Edit Student Details</span>
+        </div>
+        <br>
         <div class="form-group">
             <input type="email" class="form-control item" id="learnerid" placeholder="Learner ID" formControlName="id">
         </div>
