--- a/Frontend/src/app/pages/csv/csv.component.html
+++ b/Frontend/src/app/pages/csv/csv.component.html
@@ -10,3 +10,20 @@
     <input type="file" name="chooseFile" id="chooseFile">
   </div>
 </div>
+
+
+<!-- JS file -->
+
+<!-- $('#chooseFile').bind('change', function () {
+  var filename = $("#chooseFile").val();
+  if (/^\s*$/.test(filename)) {
+    $(".file-upload").removeClass('active');
+    $("#noFile").text("No file chosen..."); 
+  }
+  else {
+    $(".file-upload").addClass('active');
+    $("#noFile").text(filename.replace("C:\\fakepath\\", -->
+
+<!-- Process -->
+
+<!-- https://code.tutsplus.com/how-to-upload-and-download-csv-files-with-angularjs--cms-31489t -->
