--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -66,7 +66,9 @@
         </ng-container>
 
 
-        <div class="row d-flex justify-content-evenly">
+
+
+        <!-- <div class="row d-flex justify-content-evenly">
             <div class="col">
                 <div class="card" style="width: 18rem; height: 25rem;">
                     <img class="card-img-top" src="assets/banner4.jpg" alt="Card image cap">
@@ -87,6 +89,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
