changed add button in view students

--- a/Frontend/src/app/pages/students/viewstudents/viewstudents.component.html
+++ b/Frontend/src/app/pages/students/viewstudents/viewstudents.component.html
@@ -29,5 +29,6 @@
 </table>
 <br>
 <div >
-  <button class="button-28" role="button" routerLink="/home/addstuds"><i class="bi bi-plus-circle"></i> Add New Student</button>
+  <button type="button" routerLink="/home/addstuds" class="btn btn-outline-success"><i class="bi bi-plus-circle"></i> Add New Student</button>
+  <!-- <button class="button-28" role="button" routerLink="/home/addstuds"><i class="bi bi-plus-circle"></i> Add New Student</button> -->
 </div>
