--- a/Frontend/src/app/pages/addnotification/addnotification.component.html
+++ b/Frontend/src/app/pages/addnotification/addnotification.component.html
@@ -5,7 +5,7 @@
       <input type="text" class="form-control" id="notification" placeholder="Message..." name="notificationmess" [(ngModel)]="notification.notificationmess" #notificationmess="ngModel">
     </div>
     <br>
-      <button type="submit" class="button-86"><i class="bi bi-cloud-upload"></i> Post</button>
+      <button type="submit" class="button-86"><i class="bi bi-cloud-upload"> Post</i></button>
 </form>
 
 <!-- Display of old notifications posted -->
