--- a/Frontend/src/app/pages/students/viewstudents/viewstudents.component.css
+++ b/Frontend/src/app/pages/students/viewstudents/viewstudents.component.css
@@ -7,7 +7,7 @@ thead{
 }
 
 /* Add button */
-.button-28 {
+/* .button-28 {
   appearance: none;
   background-color: transparent;
   border: 2px solid #00ff00;
@@ -48,4 +48,4 @@ thead{
 .button-28:active {
   box-shadow: none;
   transform: translateY(0);
-}
+} */
