--- a/Frontend/src/app/pages/students/viewstudents/viewstudents.component.html
+++ b/Frontend/src/app/pages/students/viewstudents/viewstudents.component.html
@@ -9,7 +9,7 @@
       <th scope="col">Status</th>
       <th scope="col">Placement</th>
       <th scope="col">Edit</th>
-      <th scope="col">Delete</th>
+      <th *ngIf="isDeletebutton" scope="col">Delete</th>
     </tr>
   </thead>
   <br>
@@ -23,12 +23,11 @@
       <td>{{item.status}}</td>
       <td>{{item.placement}}</td>
       <td><a (click)="edititem(item._id)"><i class="bi bi-pencil-square text-primary"></i></a></td>
-      <td><a (click)="delitem(item._id)"><i class="bi bi-trash3-fill text-danger"></i></a></td>
+      <td><a *ngIf="isDeletebutton" (click)="delitem(item._id)"><i class="bi bi-trash3-fill text-danger"></i></a></td>
     </tr>
   </tbody>
 </table>
 <br>
 <div >
-  <button type="button" routerLink="/home/addstuds" class="btn btn-outline-success"><i class="bi bi-plus-circle"></i> Add New Student</button>
-  <!-- <button class="button-28" role="button" routerLink="/home/addstuds"><i class="bi bi-plus-circle"></i> Add New Student</button> -->
+  <button *ngIf="isDeletebutton" type="button" routerLink="/home/addstuds" class="btn btn-outline-success"><i class="bi bi-plus-circle"></i> Add New Student</button>
 </div>
